# common_tools

./: README.md
Dynamixel/: README.md
Dynamixel/motor_test/: CMakeLists.txt
Dynamixel/motor_test/src/: get_position.cpp  set_position.cpp  set_position_speed.cpp
pcl_pcd/: pcd2ply.py  ply_scale.py
pointcloud/: README.md
pointcloud/cpp/: CMakeLists.txt
pointcloud/cpp/config/: icp.yaml
pointcloud/cpp/src/: icp.cpp
rosbag/: README.md
rosbag/image_publisher/: CMakeLists.txt  package.xml
rosbag/image_publisher/src/: my_publisher.cpp
rosbag/rosbag_image_extra/: convertBag2Euroc.py  run_convertBag2Euroc.bash
rosbag/rosbag_merge/: run_merge.bash
rosbag/rosbag_scan_extra/: rosbag_scan_extra.py  run_rosbag_scan_extra.sh
rosbag_image_extra/: rename_image.py  run_convertBag2Euroc.bash
rosbag_merge/: merge.py
